Update footer text

--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
     </section>
 
     <footer class="footer">
-      <div>© <span id="year"></span> AjarGen — UI template (style berbeda) + AI API connector</div>
+      <div>© <span id="year"></span> AjarGen — Dibuat oleh kelompok 11 Kecerdasan buatan B</div>
     </footer>
   </main>
 
